WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220336
PCM: Experimental debug mode stops working after initial use
https://bugs.webkit.org/show_bug.cgi?id=220336
Summary
PCM: Experimental debug mode stops working after initial use
John Wilander
Reported
2021-01-05 13:49:28 PST
We need to make sure the PCM debug mode flag sticks.
Attachments
Patch
(5.28 KB, patch)
2021-01-05 13:53 PST
,
John Wilander
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Wilander
Comment 1
2021-01-05 13:49:40 PST
<
rdar://problem/72398086
>
John Wilander
Comment 2
2021-01-05 13:53:58 PST
Created
attachment 417035
[details]
Patch
Brent Fulgham
Comment 3
2021-01-05 14:30:13 PST
Comment on
attachment 417035
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=417035&action=review
r=me
> Source/WebKit/NetworkProcess/NetworkProcess.cpp:1327 > +void NetworkProcess::setPrivateClickMeasurementDebugMode(bool enabled)
Is this always called on NetworkProcess initialization? And I assume toggling the setting switch in UIProcess sends a message that hits this?
John Wilander
Comment 4
2021-01-05 15:07:21 PST
Comment on
attachment 417035
[details]
Patch Thanks, Brent!
John Wilander
Comment 5
2021-01-05 15:08:25 PST
(In reply to Brent Fulgham from
comment #3
)
> Comment on
attachment 417035
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=417035&action=review
> > r=me > > > Source/WebKit/NetworkProcess/NetworkProcess.cpp:1327 > > +void NetworkProcess::setPrivateClickMeasurementDebugMode(bool enabled) > > Is this always called on NetworkProcess initialization? And I assume > toggling the setting switch in UIProcess sends a message that hits this?
I don't know actually. I think this may be a feature switch that requires a browser restart.
EWS
Comment 6
2021-01-05 17:09:18 PST
Committed
r271184
: <
https://trac.webkit.org/changeset/271184
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417035
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug