Source/WebKit/NetworkProcess/NetworkProcess.h
@@ -279,6 +279,7 @@ public:
     void setPrivateClickMeasurementEnabled(bool);
     bool privateClickMeasurementEnabled() const;
     void setPrivateClickMeasurementDebugMode(bool);
+    bool privateClickMeasurementDebugModeEnabled() const;
 
     using CacheStorageRootPathCallback = CompletionHandler<void(String&&)>;
     void cacheStorageRootPath(PAL::SessionID, CacheStorageRootPathCallback&&);
@@ -594,6 +595,7 @@ private:
     HashMap<WebCore::PageIdentifier, Vector<WebCore::UserContentURLPattern>> m_extensionCORSDisablingPatterns;
 
     bool m_privateClickMeasurementEnabled { true };
+    bool m_privateClickMeasurementDebugModeEnabled { false };
 };
 
 } // namespace WebKit
